# winshellpreviewWIN32

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
TestApp/: CMakeLists.txt  main.cpp
WinShellPreview/: BitmapUtils.cpp  BitmapUtils.h  CMakeLists.txt  Icon.cpp  IconImpl.h  Preview.cpp  PreviewHandler.cpp  PreviewHandler.h  PreviewImpl.h  Thumbnail.cpp  ThumbnailImpl.h  WinShellPreview.cpp  WinShellPreview.def  WinShellPreview.h  dllmain.cpp  framework.h
